--- a/frontend/src/components/Candidates.scss
+++ b/frontend/src/components/Candidates.scss
@@ -34,5 +34,19 @@
     border-bottom: 1px solid var(--mainCatskillWhite);
   }
 
+  .candidates__tableImg {
+    width: 8%;
+    margin-right: 1em;
+    border-radius: 50%;
+  }
+
   // tr:nth-child(even){background-color: #f2f2f2}
+}
+
+@media (max-width: 600px) {
+  .candidates__container {
+    .candidates__tableImg {
+      width: 55%;
+    }
+  }
 }
