--- a/frontend/src/components/Candidates/index.scss
+++ b/frontend/src/components/Candidates/index.scss
@@ -84,3 +84,11 @@
     transform: rotate(45deg);
   }
 }
+
+@media (max-width: 600px) {
+  .index__container {
+    .index__search {
+      width: 50%;
+    }
+  }
+}
