added search icon

--- a/frontend/src/components/Candidates/index.scss
+++ b/frontend/src/components/Candidates/index.scss
@@ -10,6 +10,8 @@
     width: 12%;
     border-radius: 5px;
     border: 1px solid var(--mainCatskillWhite);
+    background: url('../../assets/images/search.svg') no-repeat scroll 205px 8px;
+    background-size: 25px 25px;
   }
 
   .index__archive {
