made ui changes

--- a/frontend/src/assets/fonts/font.scss
+++ b/frontend/src/assets/fonts/font.scss
@@ -13,5 +13,5 @@
 @font-face {
   font-family: 'ProximaNova';
   src: url('./proxima-nova/FontsFree-Net-Proxima-Nova.ttf') format('truetype');
-  font-weight: semiBold;
+  font-weight: bolder;
 }
